--- a/src/styles/BottomNav.module.scss
+++ b/src/styles/BottomNav.module.scss
@@ -1,7 +1,8 @@
 .position {
   display: flex !important;
-  justify-content: space-around !important;
+  justify-content: space-between !important;
   position: fixed;
+  max-width: 1024px;
   width: 100%;
   bottom: 0;
   background-color: rgba(255, 255, 255, 0.749) !important;
