--- a/src/styles/CardItem.module.scss
+++ b/src/styles/CardItem.module.scss
@@ -1,4 +1,18 @@
 .card {
   margin-bottom: 20px;
-  margin-top: 10px;
+  margin-top: 20px;
+  background: #118ab2 !important;
+}
+
+.heading {
+  font-size: 23px;
+  text-align: center;
+  color: rgba(255, 255, 255, 0.898);
+  font-weight: bold;
+  background-color: rgba(211, 64, 19, 0.905);
+  text-decoration: underline;
+  padding: 2px 5px;
+  border-radius: 6px;
+  margin-right: 10px;
+  width: 100%;
 }
