--- a/src/styles/ItemDetails.module.scss
+++ b/src/styles/ItemDetails.module.scss
@@ -1,10 +1,13 @@
+.bg {
+  background: #073b4c;
+}
+
 .page {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   padding-bottom: 100px;
-  background: #073b4c;
-  min-height: 100%;
+  height: 100%;
 }
 
 .title {
@@ -17,8 +20,20 @@
   margin-bottom: 10px;
 }
 
+.itemTitle {
+  color: rgba(255, 255, 255, 0.83);
+  font-weight: bold;
+  background-color: rgba(211, 64, 19, 0.905);
+  padding: 2px 5px;
+  border-radius: 6px;
+  margin-right: 10px;
+}
+
 .button {
-  padding: 10px 0 !important;
+  padding: 10px 15px !important;
   margin: 5px 0 !important;
   background-color: #118ab2 !important;
+  display: flex;
+  justify-content: flex-start;
+  color: black;
 }
