--- a/src/styles/CardItem.module.scss
+++ b/src/styles/CardItem.module.scss
@@ -1,13 +1,13 @@
 .card {
   margin-bottom: 20px;
   margin-top: 20px;
-  background: #118ab2 !important;
+  background: #7d7d7d3d !important;
 }
 
 .heading {
   font-size: 23px;
   text-align: center;
-  color: rgba(255, 255, 255, 0.898);
+  color: rgba(213, 211, 211, 0.898);
   font-weight: bold;
   background-color: rgba(211, 64, 19, 0.905);
   text-decoration: underline;
